# INS

./: .clang-format  CMakeLists.txt  GINS.xmind  INS class.xmind  INS_Mechanization class.xmind  LICENSE  README.md  error_plot.m  捷联惯导机械编排.docx
include/: DataStorage.hpp  DataTransform.hpp  GINS.hpp  INS.hpp  INSMechanization.hpp  Utils.hpp
src/: GINS.cpp  GINS_test.cpp  INS.cpp  INSMechanization.cpp  main.cpp  mechanization_test.cpp  test.cpp
